# Ray-Tracer

./: CMakeLists.txt
src/: BVH.cpp  BVH.h  Camera.cpp  Camera.h  Light.cpp  Light.h  Plane.cpp  Plane.h  Scene.cpp  Scene.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  main.cpp
